--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,25 @@
+html, body {
+  font-family: 'Montserrat', sans-serif;
+}
+
 .container {
-    width: 70%;
+    max-width: 1200px;
+    width: 100%;
     margin: auto;
     text-align: center;
   }
-
+.left {
+  display: inline-block;
+  float: left;
+  width: calc(100% - 400px);
+  box-sizing: border-box;
+}
+.right {
+  display: inline-block;
+  float: right;
+  width: 400px;
+  box-sizing: border-box;
+}
  #cookies{
     text-align: center;
 
@@ -16,7 +32,7 @@
   h1 {
     margin: 30px;
     text-shadow: 5px 0 #232931;
-    font-size: 6rem;
+    font-size: 3rem;
     color: #11cdd4;
   }
 
@@ -25,13 +41,26 @@
     color: #11cdd4;
   }
 
-  img {
+img {
     width: 40%;
     cursor: pointer;
+    transition: all .2s ease-in-out;
   }
-
+img:hover {
+  transform: scale(1.1)
+}
+.count_wrapper {
+  width: 100%;
+  background: rgba(0,0,0,0.2);
+  color: #fff;
+  font-size: 20px;
+  margin: 50px 0;
+  padding: 20px;
+}
   .btn {
     background: #11cdd4;
+    width: 100%;
+    display: block;
     background-image: -webkit-linear-gradient(top, #11cdd4, #1199e);
     background-image: -moz-linear-gradient(top, #11cdd4, #1199e);
     background-image: -ms-linear-gradient(top, #11cdd4, #1199e);
@@ -39,13 +68,15 @@
     background-image: linear-gradient(to bottom, #11cdd4, #1199e);
     -webkit-border-radius: 8;
     -moz-border-radius: 8;
-    border-radius: 8px;
+    border-radius: 2px;
     font-family: 'Montserrat', sans-serif;
     color: #ffffff;
     font-size: 20px;
     padding: 10px 20px 10px 20px;
+    margin-top: 10px;
     text-decoration: none;
     cursor: pointer;
+    text-align: left;
   }
 
   .btn:hover {
@@ -57,3 +88,26 @@
     background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
     text-decoration: none;
   }
+
+  #multiplier_wrapper, #bonus_wrapper, #autoclicker_wrapper {
+    position: relative;
+  }
+
+  .more_info {
+    position: absolute;
+    top: 0;
+    right: 400px;
+    width: 300px;
+    padding: 10px;
+    background: rgba(0,0,0,0.5);
+    color: #fff;
+    font-size: 15px;
+    text-align: left;
+  }
+
+.hidden {
+  display: none;
+}
+.shown {
+  display: block;
+}
